Add md5 checker and it's now 19-jre-alpin